--- a/src/main/webapp/resources/css/fonts.css
+++ b/src/main/webapp/resources/css/fonts.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
 
 @font-face {
