상점 페이지(미니미 페이지 구현 중 ) 커밋

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -63,8 +63,18 @@
  	margin-left: 100px;
  }
 
+.storeAtag {
+	text-decoration: none;
+	margin-left: 120px;
+	margin-right: 120px;
+}
 
-
+.storeMinimi {
+	width: 10%;
+	height: 10%;
+	margin: 30px;
+	
+}
 
 
 
