--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 
 #loginLogo {
-	margin-top: 20px;
 	width: 20%;
+}
+
+#topMenu{
+	display:flex; 
+	flex-direction: row;
+	height:30%;
 }
 
 .IndexPageTab {
 	width:10%;
-	height:30%;
 	border-radius: 10px;
 	font-size: 20px;
 	margin: 50px;
@@ -19,6 +23,13 @@
 	background-color: orange;
 	display: flex;
 	align-items: center;
+	
+}
+
+#divHiUser h3{
+	color: white; 
+	margin: 10px; 
+	font-size: 20px;
 	
 }
 
@@ -47,7 +58,7 @@
 }
 
 #divMainSlide {
-	
+	padding-top : 80px;
 	width: 40%;
 	height: 50%;
 }
@@ -101,4 +112,48 @@
     margin-top:60px;
     margin-bottom: 60px;
     text-align: center;
+}
+
+/****** main index slideshow css ****/
+* {box-sizing: border-box;}
+
+.mySlides {display: none;}
+
+.mySlides img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  margin: auto;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
 }
