--- a/src/main/webapp/resources/css/frame.css
+++ b/src/main/webapp/resources/css/frame.css
@@ -15,7 +15,6 @@ body {
   overflow-y: auto;
 }
 
-/*임시 효과*/
 body a:hover{
   font-weight: bold;
 }
@@ -24,7 +23,6 @@ body a{
   text-decoration: none;
 }
 
-/*미니홈피 테두리*/
 .bookcover {
   background-color: #b4d1da;
   border-radius: 9px;
@@ -60,7 +58,6 @@ body a{
   padding: 15px;
 }
 
-/*미니홈피 좌측 (프로필 라인)*/
 .profile-container {
   flex: 0.4;
   margin-right: 1.5rem;
@@ -69,11 +66,91 @@ body a{
   flex-direction: column;
 }
 
+.content-container {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-frame{
+  margin-top: 50px;
+}
+
+.menu-container {
+  flex: 0.15;
+  border: 1px solid grey;
+  background-color: white;
+  border-radius: 5px;
+  align-items: center;
+  width: 5rem;
+  height: 40px;
+}
+
+.menu-content {
+  text-align: center;
+  width: 60px;
+  height: 35px;
+  font-size: 12px;
+  border: solid 1px black;
+  background-color: rgb(42, 140, 168);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: white;
+  margin-bottom: 2px;
+  line-height: 35px;
+}
+
+.menu-content-clicked {
+  text-align: center;
+  width: 60px;
+  height: 35px;
+  font-size: 12px;
+  border: solid 1px black;
+  border-left: none;  /* 왼쪽 테두리 제거 */
+  background-color: white;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: black;
+  margin-bottom: 2px;
+}
+
+
+.header {
+  flex: 0.1;
+}
+
+.box {
+  background-color: white;
+  flex: 3;
+  border-radius: 10px;
+  border: 1px solid #cdcdcd;
+}
+
+.content-title {
+  display: flex;
+  align-items: center;
+}
+
+.content-title-name {
+  flex: 1;
+}
+
+.content-title-url {
+  flex: 1;
+  font-size: 0.5rem;
+  text-align: end;
+}
+
 .profile-title {
   font-size: 0.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.color-red {
+  color: red;
 }
 
 .profile-box {
@@ -125,29 +202,6 @@ body a{
   min-width: 90px;
 }
 
-/*미니홈피 센터 (미니룸 라인)*/
-.content-container {
-  flex: 1;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.content-title {
-  display: flex;
-  align-items: center;
-}
-
-.content-title-name {
-  flex: 1;
-}
-
-.content-title-url {
-  flex: 1;
-  font-size: 0.5rem;
-  text-align: end;
-}
-
 .content-box {
   display: flex;
   flex-direction: column;
@@ -156,134 +210,6 @@ body a{
   max-height: calc(100vh - 20px);
 }
 
-.box-title {
-  font-family: "KOTRA_BOLD-Bold";
-  border-bottom: 1px solid grey;
-  color: #3b87ab;
-}
-
-.box-title-sub {
-  font-family: "KOTRA_BOLD-Bold";
-  font-size: 8px;
-  color: gray;
-  padding-bottom: 3px;
-}
-
-.news-flex-box {
-  flex: 0 0 auto;
-  margin-bottom: 5px;
-  display: flex;
-  font-size: 0.8rem;
-}
-
-.news-box {
-  flex: 1;
-}
-
-.news-row {
-  display: flex;
-  font-size: 0.85rem;
-  margin: 3px 0;
-}
-
-.category-pic {
-  background-color: #f15f5f;
-}
-
-.category-post {
-  background-color: #617dc1;
-}
-
-.news-category {
-  padding: 0 6px;
-  margin-right: 6px;
-  color: white;
-  border-radius: 3px;
-}
-
-.miniroom-title {
-  border: 1px solid gray;
-  max-width: 100px;
-  text-align: center;
-  font-size: 12px;
-  padding: 3px;
-  border-radius: 4px;
-}
-
-.miniroom-edit{
-margin-left: 353px;
-}
-
-.miniroom-gif-box {
-  border: 1px solid #808080;
-  flex: 1;
-  display: flex;
-}
-
-.miniroom-gif-box img {
-	width: 100%
-}
-
-.main-cmt-write{
-  background: rgb(211, 211, 211);
-  border: 2px solid color=navy;
-  padding-left: 10px;
-  font-size: 12px;
-}
-
-.main-cmt-write input {
-  min-width: 360px;
-  margin-right: 20px;
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
-.main-cmt-content li {
-  font-size: 10px;
-  border-bottom: 1px solid gray;
-  padding: 5px;
-}
-
-.main-cmt-info {
-	color: black;
-	font-weight: bold;
-	margin-left: 20px;
-}
-
-/*미니홈피 우측 (메뉴 라인)*/
-.menu-container{
-  margin-top: 50px;
-}
-
-.menu-content {
-  text-align: center;
-  width: 60px;
-  height: 35px;
-  font-size: 12px;
-  border: solid 1px black;
-  background-color: rgb(42, 140, 168);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  color: white;
-  margin-bottom: 2px;
-  line-height: 35px;
-}
-
-.menu-content-clicked {
-  text-align: center;
-  width: 60px;
-  height: 35px;
-  font-size: 12px;
-  border: solid 1px black;
-  border-left: none;  /* 왼쪽 테두리 제거 */
-  background-color: white;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  color: black;
-  margin-bottom: 2px;
-}
-
-/*오디오*/
 .side-right{
   float: right;
   width: 12.5%;
@@ -292,59 +218,4 @@ margin-left: 353px;
 
 .side-right audio{
   width:150px;
-}
-
-.update-box {
-  flex: 1;
-}
-
-.menu-row {
-  display: flex;
-  border-bottom: 1px dashed grey;
-  margin: 3px 0;
-}
-
-.menu-item {
-  flex: 1;
-}
-
-.menu-num {
-  font-family: "NeoDunggeunmo";
-  padding-left: 6px;
-  color: #003399;
-}
-
-.minihome-nIcon {
-	width: 10px;
-}
-
-.miniroom {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-/*별도*/
-.header {
-  flex: 0.1;
-}
-
-.box {
-  background-color: white;
-  flex: 3;
-  border-radius: 10px;
-  border: 1px solid #cdcdcd;
-}
-
-.btn-edit {
-  margin-bottom: 0;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  padding-bottom: 2px;
-  font-size: 10px;
-  background-color: rgb(177, 175, 175);
-  color: white;
-  border-radius: 5px;
-  border: 0px solid gray;
 }
