--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
 #loginLogo {
-	margin-top: 20px;
-	width: 20%;
+	width: 100%;
 }
 
 .IndexPageTab {
@@ -16,10 +15,15 @@
 
 #divHiUser {
 	height: 60px;
-	background-color: orange;
+	background-color: #ff8c1a;
 	display: flex;
 	align-items: center;
-	
+	color : white;
+	/*font-size: 20px;*/
+}
+
+#divHiUser h3{
+	margin : 20px;
 }
 
 #mainMinimi {
@@ -37,17 +41,30 @@
 	border-color: navy;
 	
 }
+
 #divLogin {
 	padding-top: 150px;
 	padding-left:30px;
 	width: 40%;
 	height: 60%;
 	border-color: navy;
+	text-align : center;
 	
+}
+#divLogin a{
+	text-decoration : none;
+	color : black;
+	margin : 5px;
+}
+
+#frmLogin input{
+	width:60%;
+	padding : 10px;
 }
 
 #divMainSlide {
-	
+	padding-top: 80px;
+	padding-left : 30px;
 	width: 40%;
 	height: 50%;
 }
@@ -101,4 +118,73 @@
     margin-top:60px;
     margin-bottom: 60px;
     text-align: center;
+}
+
+
+/****** main index slideshow css ****/
+* {box-sizing: border-box;}
+
+.mySlides {display: none;}
+
+.mySlides img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  margin: auto;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+/*nav bar css*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color : black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+	background-color :#ff8c1a;
+	color : white;
 }
