--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -203,3 +203,29 @@ li a:hover {
 .right{
 	margin-left:auto;
 }
+
+/*******signUp.jsp********************************/
+#divUserInfo{
+	width:50%;
+	margin-left : auto;
+	margin-right : auto;
+}
+
+#loginLogo{
+	width : 100%;
+}
+
+.widthFull{
+	width: 100%;
+	padding: 8px 10px;
+  	margin: 8px 0;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 300px auto 300px;
+}
+.grid-item {
+  padding: 20px;
+ /*  text-align: center; */
+}
+/***************************************/
