--- a/src/main/webapp/resources/css/album.css
+++ b/src/main/webapp/resources/css/album.css
@@ -1,30 +1,3 @@
-#albumTitle {
-	margin: 5px;
-}
-
-.underLine {
-  width: 100%;
-  height: 2px;
-  background-color: black;
-  margin: -1px 0 20px 0;
-  display: block;
-  content: "";
-}
-#writerAndDate {
-	display: flex;
-	justify-content: space-between;
-	margin-top: -10px;
-}
-
-#albumWriter {
-	font-size: 15px;
-	color: steelblue;
-}
-
-#albumWrite_date {
-	font-size: 11px;
-}
-
 #writerUnderLine {
 	width: 100%;
 	height: 1px;
@@ -69,8 +42,20 @@
 }
 
 .album-profile-username{
-	
+	flex: 1;
+  color: #0f1b5c;
+	height: 20px;
 }
 
+.album-dot{
+	color: #3b7ada;
+	margin-top: 160px;
+}
 
-
+.album-title{
+	text-align: center;
+  font-size: 15px;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  background-color: #e6e6e6;
+}
