--- a/src/main/webapp/resources/css/board.css
+++ b/src/main/webapp/resources/css/board.css
@@ -14,6 +14,7 @@ body a {
 }
 
 .board-container{
+	margin-top:20px;
 	border-top: 1px solid black;
 	padding-top: 4px;
 }
@@ -132,4 +133,76 @@ thead tr:last-child th {
 	padding-bottom:4px;
 	display:flex;
 	align-items:center;
+}
+
+.btn-right{
+	display:flex;
+}
+
+.btn-container{
+	display: flex;
+	justify-content: space-between;
+}
+
+.board-outer-container{
+	border-bottom: 1px solid black;
+	padding-top: 4px;
+}
+
+.board-inner-container{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom:5px;
+}
+
+.board-detail-left{
+	margin-left:10px;
+}
+
+.board-detail-content{
+	width: 100%;
+	height: 200px;
+	padding-left: 10px;
+	padding-top: 5px;
+	resize: none;
+	margin-bottom: 10px;
+	text-align:center;
+}
+
+.board-comment{
+	display:flex;
+	border:1px solid black;
+	padding:5px;
+	margin-bottom:3px;
+	background-color: #E2E2E2;
+	align-items:center;
+}
+
+.board-comment-writer{
+	color:steelblue;
+}
+
+.board-comment-content{
+	margin-left:20px;
+	margin-right:10px;
+}
+
+.board-comment-date{
+	right:0;
+	font-size:10px;
+	color:gray;
+}
+
+.board-comment-write{
+	display:flex;
+	border:1px solid black;
+	padding:3px;
+	border-left:none;
+	border-right:none;
+}
+
+.comment-content-write{
+	margin-left:10px;
+	margin-right:5px;
+	width:410px;
 }
