--- a/src/main/webapp/resources/smarteditor/css/ko_KR/smart_editor2.css
+++ b/src/main/webapp/resources/smarteditor/css/ko_KR/smart_editor2.css
@@ -7,6 +7,7 @@ body,#smart_editor2,#smart_editor2 p,#smart_editor2 h1,#smart_editor2 h2,#smart_
 #smart_editor2 em,#smart_editor2 address{font-style:normal}
 #smart_editor2 img,#smart_editor2 fieldset{border:0}
 #smart_editor2 hr{display:none}
+#smart_editor2{margin-right:1px!important;min-width:100px!important} 
 #smart_editor2 ol,#smart_editor2 ul{list-style:none}
 #smart_editor2 button{border:0;background:none;font-size:11px;vertical-align:top;cursor:pointer}
 #smart_editor2 button span,#smart_editor2 button em{visibility:hidden;overflow:hidden;position:absolute;top:0;font-size:0;line-height:0}
@@ -71,7 +72,7 @@ body,#smart_editor2,#smart_editor2 p,#smart_editor2 h1,#smart_editor2 h2,#smart_
 #smart_editor2 .se2_alert_btns .se2_confirm{background-position:-369px -434px}
 #smart_editor2 .se2_alert_btns .se2_cancel{background-position:-419px -434px}
 /* TEXT_TOOLBAR */
-#smart_editor2 .se2_text_tool{position:relative;clear:both;z-index:30;padding:4px 0 4px 3px;background:#f4f4f4 url("../../img/bg_text_tool.gif") 0 0 repeat-x;border-bottom:1px solid #b5b5b5;*zoom:1}
+#smart_editor2 .se2_text_tool{position:relative;clear:both;z-index:30;padding:4px 15px 4px 3px;background:#f4f4f4 url("../../img/bg_text_tool.gif") 0 0 repeat-x;border-bottom:1px solid #b5b5b5;*zoom:1}
 #smart_editor2 .se2_text_tool:after{content:"";display:block;clear:both}
 #smart_editor2 .se2_text_tool ul{float:left;display:inline;margin-right:3px;padding-left:1px;white-space:nowrap}
 #smart_editor2 .se2_text_tool li{_display:inline;float:left;position:relative;z-index:30}
