--- a/src/main/webapp/resources/css/index/notice.css
+++ b/src/main/webapp/resources/css/index/notice.css
@@ -166,40 +166,8 @@
 	height: 30px;
 }
 
-.notice-info{
-	 display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.notice-write-date{
-	text-align:right;
-}
-
 .notice-info-group{
 	resize:none;
-}
-
-.notice-title{
-	width: 100%;
-	height: 30px;
-	margin-bottom: 10px;
-	font-weight: bold;
-	padding-left:10px;
-	text-align:center;	
-	color:gray;
-	border:none;
-	outline:none;
-}
-
-.notice-info-content{
-	width: 100%;
-	height: 300px;
-	padding-left: 10px;
-	padding-top: 5px;
-	resize: none;
-	margin-bottom: 10px;
-	text-align:center;
 }
 
 .btn-right{
@@ -216,3 +184,54 @@
 	width: 60px;
 	height: 30px;
 }
+
+/* noticeDetail.jsp */
+.noticeDetail-container{
+	
+}
+
+.noticeDetail-content-container{
+	
+}
+
+.notice-title{
+	width: 100%;
+	height: 30px;
+	margin-bottom: 1px;
+	font-size: 14px;
+	font-weight: bold;
+	text-align:center;	
+	border:1px solid gray;
+	border-radius: 2px;
+	background-color: lightgray;
+	outline:none;
+}
+
+.notice-info{
+	display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 10px;
+  padding-bottom: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #747474;
+}
+
+.notice-write-date{
+	text-align:right;
+}
+
+.notice-info-content{
+	width: 100%;
+	min-height: 300px;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin: 20px 0;
+	border: 1px solid gray;
+	border-radius: 2px;	
+}
+
+
+
