--- a/src/main/webapp/resources/css/minihome/frame.css
+++ b/src/main/webapp/resources/css/minihome/frame.css
@@ -290,6 +290,7 @@ margin-left: 353px;
   border-bottom-right-radius: 5px;
   color: black;
   margin-bottom: 2px;
+  line-height: 35px;
 }
 
 /*오디오*/
