diary write view 완

--- a/src/main/webapp/resources/css/minihome/board.css
+++ b/src/main/webapp/resources/css/minihome/board.css
@@ -233,6 +233,7 @@ thead tr:last-child th {
 	max-width: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
+}
   
 .board-detail-right button {
 	margin-right: 5px;
