--- a/src/main/webapp/resources/css/minihome/diary.css
+++ b/src/main/webapp/resources/css/minihome/diary.css
@@ -243,3 +243,66 @@
 .btn-cmt-del{
 	margin-left : 3px;
 }
+
+.board-overflow{
+	width: 100%;
+	max-width: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.board-title-container{
+	border-bottom: 1px solid black;
+	padding-top: 4px;
+}
+
+.board-title{
+	border:none;
+	outline:none;
+	width:500px;
+	height:50px;
+	font-size:20px;
+	font-weight:bold;
+	 
+}
+
+.board-write-container{
+	padding-bottom:4px;
+	display:flex;
+	justify-content: space-between;
+	align-items:center;
+	font-size: 13px;
+}
+
+.board-writer{
+	border:none;
+	outline:none;
+	text-align: left;
+	font-size: 15px;
+	color: steelblue;
+	margin-left:10px;
+	align-items:center;
+}
+
+.board-write-date{
+	border:none;
+	outline:none;
+	float:right;
+	text-align:right;
+	align-items:center;
+	margin-right : 15px;
+
+}
+
+.btn-right{
+	display:flex;
+}
+
+.btn-list{
+	margin-right:5px;
+}
+
+.btn-container{
+	display: flex;
+	justify-content: space-between;
+}
