--- a/src/main/webapp/resources/css/minihome/board.css
+++ b/src/main/webapp/resources/css/minihome/board.css
@@ -233,9 +233,14 @@ thead tr:last-child th {
 	max-width: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
+}
   
 .board-detail-right button {
 	margin-right: 5px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.name-container{
+	margin-bottom:15px;
 }
