--- a/src/main/webapp/resources/css/minihome/miniroomEdit.css
+++ b/src/main/webapp/resources/css/minihome/miniroomEdit.css
@@ -4,17 +4,22 @@ body {
 
 .edit-frame {
 	background-color: white;
-  width: 95%;
+  width: 100%;
   height: 90%;
   border: 3px dotted orange;
   border-radius: 15px;
   margin: 0 auto;
   margin-top: 35px;
+  overflow-y: auto;
+}
+
+.edit-pad{
+	width: 80%;
+	margin: 0 auto;
 }
 
 .edit-file{
 	margin-top: 25px;
-	margin-left: 35px;
 	margin-bottom: 10px;
 }
 
@@ -23,27 +28,27 @@ body {
 }
 
 .image-container{
-	text-align: center;
-	margin-bottom: 15px;
-	font-weight: bold;
-	color: blue;
+	margin: 15 0;
 }
 
 .preview-container {
 	border: 1px solid gray;
 	border-radius: 5px;
-	width:80%;
-	margin-left: 35;
+	width:100%;
 	padding-bottom: 10px;
 }
 
 .preview-container img{
-	margin-left: 45;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.file-preview{
+	width: 100%;
+	margin: 0 auto;
 }
 
 .edit-container-under{
-	margin-left: 35px;
-	margin-right: 35px;
 	margin-top: 10px;
 }
 
@@ -58,11 +63,12 @@ body {
 }
 
 .edit-btn {
-	margin-top: 20px;
-	margin-left: 35px;
+	margin: 20 35;
+	text-align: center;
 }
 
 .edit-btn input {
-	width: 90%;
 	font-weight: bold;
+	margin: 0 15px;
+	padding: 5 20;
 }
