-이미지 첨부 삭제버튼 추가 -이미지 첨부 구분선 추가 -스마트 에디터 사진 버튼 삭제

--- a/src/main/webapp/resources/css/minihome/board.css
+++ b/src/main/webapp/resources/css/minihome/board.css
@@ -241,6 +241,30 @@ thead tr:last-child th {
 	margin-bottom: 10px;
 }
 
+.image-container{
+	margin-top:10px;
+	text-align:center;
+	border:1px solid black;
+	border-radius:5px;
+	
+}
+
+.image-container:hover .removeBtn{
+	visibility: visible;
+	opacity: 1;	
+}
+
 .name-container{
-	margin-bottom:15px;
+	text-align:center;
+}
+
+.removeBtn{
+	background:url("/resources/images/icon/minihome/removeIcon.png");
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.5s linear;
+	width:26px;
+	height:20px;
+	text-align:center;
+	border:none;
 }
