미니룸 배경화면 폴더화 / 미니룸설정

--- a/src/main/webapp/resources/css/minihome/frame.css
+++ b/src/main/webapp/resources/css/minihome/frame.css
@@ -115,7 +115,7 @@ body a{
   margin-left: 10px;
 }
 
-.profile-hs-hs{
+.profile-hs{
   margin-left: 20px;
   margin-bottom: 0px;
   padding-bottom: 0px;
@@ -217,10 +217,6 @@ body a{
   font-size: 12px;
   padding: 3px;
   border-radius: 4px;
-}
-
-.miniroom-edit{
-margin-left: 353px;
 }
 
 .miniroom-gif-box {
