--- a/src/main/webapp/resources/css/minihome/miniroomEdit.css
+++ b/src/main/webapp/resources/css/minihome/miniroomEdit.css
@@ -1,74 +1,59 @@
-body {
-	background-color: orange;
+body{
+	font-size: 12px;
 }
 
-.edit-frame {
-	background-color: white;
-  width: 100%;
-  height: 90%;
-  border: 3px dotted orange;
-  border-radius: 15px;
+.mnr-frame {
   margin: 0 auto;
-  margin-top: 35px;
-  overflow-y: auto;
+  padding: 3px;
+  width: 95%;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
 }
 
-.edit-pad{
-	width: 80%;
-	margin: 0 auto;
+.section-over {
+  width: 100%;
+  display: flex;
+  height: 59%;
+  justify-content: space-between;
 }
 
-.edit-file{
-	margin-top: 25px;
-	margin-bottom: 10px;
+.section1 {
+  width: 69%;
+  height: 100%;
+  padding: 3px;
+  border: 1px solid red;
 }
 
-.edit-file input{
-	font-weight: bold;
+.section2 {
+  width: 29%;
+  height: 100%;
+  padding: 3px;
+  border: 1px solid blue;
 }
 
-.image-container{
-	margin: 15 0;
+.mnr-bg {
+	height: 320px;
+	overflow-y:auto; 
 }
 
-.preview-container {
-	border: 1px solid gray;
-	border-radius: 5px;
-	width:100%;
-	padding-bottom: 10px;
+.section2 img {
+	width: 200px;
+	height: 110px;
+	margin: 5 0;
 }
 
-.preview-container img{
+.section-under {
+    width: 100%;
+    height: 38%;
+    display: flex;
+    margin-top: 10px;
+}
+
+.section3 {
 	width: 100%;
-	margin: 0 auto;
-}
-
-.file-preview{
-	width: 100%;
-	margin: 0 auto;
-}
-
-.edit-container-under{
-	margin-top: 10px;
-}
-
-.edit-introduce textarea{
-	width: 100%;
-	height: 100px;
-	border-radius: 5px;
-	resize: none;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 10px;
-}
-
-.edit-btn {
-	margin: 20 35;
-	text-align: center;
-}
-
-.edit-btn input {
-	font-weight: bold;
-	margin: 0 15px;
-	padding: 5 20;
+	height: 100%;
+	padding: 3px;
+	border: 1px solid yellow;
 }
