--- a/src/main/webapp/resources/css/minihome/miniroomEdit.css
+++ b/src/main/webapp/resources/css/minihome/miniroomEdit.css
@@ -26,6 +26,18 @@ body{
   border: 1px solid red;
 }
 
+.section1-title {
+	width: 100%;
+	height: 20px;
+	font-weight: bold;
+	padding-left: 10px;
+	background-color: lightgray;
+}
+
+.section1-canvas {
+	height: 100%;
+}
+
 .section2 {
   width: 29%;
   height: 100%;
@@ -45,10 +57,10 @@ body{
 }
 
 .section-under {
-    width: 100%;
-    height: 38%;
-    display: flex;
-    margin-top: 10px;
+  width: 100%;
+  height: 38%;
+  display: flex;
+  margin-top: 10px;
 }
 
 .section3 {
