--- a/src/main/webapp/resources/css/index/main.css
+++ b/src/main/webapp/resources/css/index/main.css
@@ -254,3 +254,22 @@ li a:hover {
 .selected {
     background-color: lightblue;
  }
+
+/* 아이디 찾기 관련 css */
+ .frmFindId{
+ 	text-align:center;
+ }
+ 
+ .confirm-btn{
+	width:80px;
+	height:30px;
+	background-color: #FF9016;
+	border-radius: 5px;
+ }
+ 
+ .cancel-btn{
+ 	width:80px;
+	height:30px;
+	background-color: #FF9016;
+	border-radius: 5px;
+ }
