--- a/src/main/webapp/resources/css/minihome/setting.css
+++ b/src/main/webapp/resources/css/minihome/setting.css
@@ -5,6 +5,7 @@
     margin-block-end: 0px;
     color:#369;
     font-weight:bold;
+    padding : 1px;
 }
 
 .tree,
@@ -27,7 +28,7 @@
   top:0;
   bottom:0;
   left:0;
-  border-left:1px solid;
+ /*  border-left:1px solid; */
 }
 
 .tree li {
@@ -52,6 +53,7 @@
 
 .tree li:last-child:before {
   background:white; /* same with body background */
+  /* border-left : 1px solid white; */
   height:auto;
   top:1em; /* (line-height/2) */
   bottom:0;
