회원가입 페이지 수정 완료 커밋입니다.

--- a/src/main/webapp/resources/css/index/main.css
+++ b/src/main/webapp/resources/css/index/main.css
@@ -254,3 +254,11 @@ li a:hover {
 .selected {
     background-color: lightblue;
  }
+
+.confirm-group {
+    text-align: center;
+}
+
+.divGender {
+	margin-bottom: 4px;
+}
