--- a/src/main/webapp/resources/css/minihome/miniroomEdit.css
+++ b/src/main/webapp/resources/css/minihome/miniroomEdit.css
@@ -3,49 +3,71 @@ body{
 }
 
 .mnr-frame {
-  margin: 0 auto;
-  padding: 3px;
-  width: 95%;
-  height: 95%;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
+	margin: 0 auto;
+	padding: 3px;
+	width: 95%;
+	height: 95%;
+	display: flex;
+	flex-direction: column;
+	border: 1px solid black;
 }
 
 .section-over {
-  width: 100%;
-  display: flex;
-  height: 59%;
-  justify-content: space-between;
+	width: 100%;
+	display: flex;
+	height: 59%;
+	justify-content: space-between;
 }
 
 .section1 {
-  width: 69%;
-  height: 100%;
-  padding: 3px;
-  border: 1px solid red;
+	width: 503px;
+	height: 100%;
+	padding: 3px;
+}
+
+.miniroom-title{
+	width:503px;
+	height:53px;
+	background-color: #D2D8D9;
+	text-align:center;
+	font-weight: bold;
+	align-items: center;
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .div-canvas{
-	width:515px;
-	height:320px;
+	width:503px;
+	height:283px;
 	position:relative;
 }
 
 .section2 {
-  width: 29%;
-  height: 100%;
-  padding: 3px;
-  border: 1px solid blue;
+	width: 238px;
+	height: 100%;
+	padding: 3px;
+}
+
+.background-title{
+	width:236px;
+	height:53px;
+	background-color: #A4E9FF;
+	text-align:center;
+	font-weight: bold;
+	align-items: center;
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .mnr-bg {
-	height: 320px;
+	height: 271px;
 	overflow-y:auto; 
 }
 
 .section2 img {
-	width: 200px;
+	width: 210px;
 	height: 110px;
 	margin: 5 0;
 }
@@ -61,10 +83,79 @@ body{
 	width: 100%;
 	height: 100%;
 	padding: 3px;
-	border: 1px solid yellow;
+	overflow-y:auto;
+	margin-left:10px;
+	margin-right:10px; 
+}
+
+.minimi-title{
+	width:auto;
+	height:20px;
+	background-color: #A1E0DD;
+	text-align:center;
+	font-weight: bold;
+	align-items: center;
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .section3 img{
-	width:100px;
-	height:100px;
+	width:95px;
+	height:90px;
+	border:1px solid black;
+	border-radius:5px;
+	margin-top:5px;
+}
+
+.minimiBtnPlus{
+	margin-right:3px;
+	text-align:center;
+	font-weight: bold;
+	padding: 0;
+	margin:0;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.minimiBtnMinus{
+	margin-right:3px;
+	text-align:center;
+	font-weight: bold;
+	padding: 0;
+	margin:0;
+	font-size: 20;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.minimiBtnDelete{
+	margin-right:3px;
+	text-align:center;
+	font-weight: bold;
+	padding: 0;
+	margin:0;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.minimiContainer {
+    position: relative;
+}
+
+.btnContainer {
+    opacity: 0; /* 기본적으로 투명하게 */
+    transition: opacity 0.3s; /* 투명도 변화에 대한 부드러운 전환 효과 */
+    pointer-events: none; /* 기본적으로 마우스 이벤트 받지 않음 */
+    display:flex;
+    justify-content: center;
+    position: absolute;
+}
+
+.minimiContainer:hover .btnContainer {
+    opacity: 1; /* 호버 시 불투명하게 */
+    pointer-events: auto; /* 호버 시 마우스 이벤트 받음 */
 }
