--- a/src/main/webapp/resources/css/minihome/setting.css
+++ b/src/main/webapp/resources/css/minihome/setting.css
@@ -8,6 +8,25 @@
     padding : 1px;
 }
 
+.setting-menu-dot{
+	width : 10px;
+	height : auto;
+}
+
+/* 좌측라인  */
+.setting-folder-group{
+	font-size: 12px;
+}
+
+
+.setting-profile-username{
+	flex: 1;
+  color: #0f1b5c;
+	height: 20px;
+}
+
+
+/*좌측 리스트 */
 .tree,
 .tree ul {
   margin:0 0 0 1em; /* indentation */
