비밀번호 확인 메시지 정렬 푸시

--- a/src/main/webapp/resources/css/index/main.css
+++ b/src/main/webapp/resources/css/index/main.css
@@ -295,3 +295,13 @@ li a:hover {
 .divGender {
 	margin-bottom: 4px;
 }
+
+.divPwCheck {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#passwordMatchMessage {
+	font-size: 14px;
+}
