--- a/src/main/webapp/resources/css/index/main.css
+++ b/src/main/webapp/resources/css/index/main.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 .logoATag {
 	width:20%;
 }
@@ -9,8 +14,9 @@
    margin:0 auto;
 }
 
-#loginLogo {
-   width: 100%;
+.index-header-logo {
+	width: 50%;
+	height: auto;
 }
 
 .IndexPageTab {
@@ -50,6 +56,46 @@
 	display:flex; 
 	flex-direction: row; 
 	align-items: center;
+}
+
+.index-header {
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.index-header-left {
+	flex: 40%;
+}
+
+.index-header-right {
+	flex: 60%;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.index-header-right a:hover{
+	cursor: pointer;
+	background-color: orange;
+}
+
+.index-a-store {
+	padding: 25px 60px;
+}
+
+.index-a-notice {
+	padding: 25px 40px;
+}
+
+.index-a-mnh {
+	padding: 25px 30px;
+}
+
+.index-a-logout {
+	padding: 25px 40px;
 }
 
 #mainMinimi {
@@ -257,10 +303,6 @@ li a:hover {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
-}
-
-#loginLogo {
-   width: 100%;
 }
 
 .widthFull {
