--- a/src/main/webapp/resources/css/index/main.css
+++ b/src/main/webapp/resources/css/index/main.css
@@ -158,55 +158,6 @@ a {
    width: 110%;
 }
 
-.mainBtn {
-   width: 10%;
-   height: 50px;
-   margin-left: 100px;
-}
-
-.storeAtag {
-   text-decoration: none;
-   color: black;
-   margin-left: 120px;
-   margin-right: 120px;
-}
-
-.products {
-   text-align: center;
-}
-
-.productList {
-   width: 100%;
-   height: 100%;
-   margin-left: auto;
-   margin-right: auto;
-   display: inline-block;
-}
-
-.product {
-   display: block;
-   width: 225px;
-   text-align: center;
-   text-decoration: none;
-   color: black;
-   float: left;
-   margin-left: 10px;
-   margin-right: 10px;
-   margin-bottom: 30px;
-}
-
-.product-name {
-   margin-top: 20px;
-   margin-bottom: 4px;
-}
-
-.products h3 {
-   font-size: 24px;
-   color: #545454;
-   margin-top: 60px;
-   margin-bottom: 60px;
-   text-align: center;
-}
 
 /****** main index slideshow css ****/
 * {
@@ -264,7 +215,7 @@ to {
    opacity: 1
 }
 
-}
+
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
@@ -352,6 +303,6 @@ li a:hover {
 	align-items: center;
 }
 
-#passwordMatchMessage {
+.MatchMessage {
 	font-size: 14px;
 }
