--- a/src/main/webapp/resources/css/index/store.css
+++ b/src/main/webapp/resources/css/index/store.css
@@ -8,3 +8,53 @@
 	border-style: solid;
 	border-radius: 20px;
 }
+
+.mainBtn {
+   width: 10%;
+   height: 50px;
+   margin-left: 100px;
+}
+
+.storeAtag {
+   text-decoration: none;
+   color: black;
+   margin-left: 120px;
+   margin-right: 120px;
+}
+
+.products {
+   text-align: center;
+}
+
+.productList {
+   width: 100%;
+   height: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   display: inline-block;
+}
+
+.product {
+   display: block;
+   width: 225px;
+   text-align: center;
+   text-decoration: none;
+   color: black;
+   float: left;
+   margin-left: 10px;
+   margin-right: 10px;
+   margin-bottom: 30px;
+}
+
+.product-name {
+   margin-top: 20px;
+   margin-bottom: 4px;
+}
+
+.products h3 {
+   font-size: 24px;
+   color: #545454;
+   margin-top: 60px;
+   margin-bottom: 60px;
+   text-align: center;
+}
